# eurotech-hk

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  IDEA.md  Makefile  README.md  docker-compose.yml  nx.json  package.json  pyproject.toml  requirements.txt
alveslib/: __init__.py  agent.py  logger.py  scraper.py  tracing.py
apps/backend/fastapi/: project.json  server.py
apps/backend/flask/: project.json
apps/webapp/: project.json
apps/webapp-minimal/: project.json
apps/webapp/src/app/blog/: page.tsx
apps/webapp/src/app/privacy-policy/: page.tsx
apps/webapp/src/components/: Testimonials1.tsx
apps/webapp/src/libs/: locales.ts
apps/worker/: project.json
dlib/: __init__.py  agent.py  logger.py  project.json  scraper.py  tracing.py
docker/: ml.Dockerfile  worker.Dockerfile
ml/: disaster_risk.py  project.json
ml/configs/data/: default.yaml
ml/configs/train/: default.yaml
ml/data/: aed.py  cache.py  centanet.py  corr.py  disaster_analysis.py  etl.py  feature_spec.py  fetch_r2.py  ha_hospitals.py  hkfp.py  hkma.py  openmeteo.py  storage.py
ml/data/loaders/: __init__.py  aqhi.py  base.py  headlines.py  immigration.py  r2_data.py  registry.py  weather.py
ml/data/processed/: corr_results.csv  dataset.pt  hk_temperature_metadata.json  metadata.json
ml/data/processed/.cache/: 2cfe41821cbff284.json  d2a346fad6d39cbf.json  hkma_interbank_2024-06-06_2026-06-06.json
ml/data/schemas/: _registry.py
ml/data/schemas/CrowdFlowObserved/: schema.json
ml/models/: arch.py  test_text_conditioning.py  train.py
src/: main.py
(+1 files in other folders)
